新增security模块